--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -1,8 +1,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="/css/tiny-slider.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <h1>Admin Dashboard</h1>
@@ -24,13 +30,17 @@
                     <td th:text="${product.price}"></td>
                     <td th:text="${product.stock}"></td>
                     <td>
-                        <a th:href="@{/admin/edit/{id}(id=${product.id})}" class="btn btn-warning">Edit</a>
-                        <a th:href="@{/admin/delete/{id}(id=${product.id})}" class="btn btn-danger">Delete</a>
+                        <a th:href="@{/admin/edit/{id}(id=${product.id})}" class="btn btn-primary">Edit</a>
+                        <a th:href="@{/admin/delete/{id}(id=${product.id})}" class="btn btn-primary">Delete</a>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
-    
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/tiny-slider.js"></script>
+    <script src="js/custom.js"></script>
+
 </body>
+
 </html>
