--- a/src/main/resources/templates/admin/edit-product.html
+++ b/src/main/resources/templates/admin/edit-product.html
@@ -1,6 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit Product</title>
+    <!-- Bootstrap CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="/css/tiny-slider.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Edit Product</h1>
@@ -10,7 +15,10 @@
         <label>Price: <input type="number" th:field="*{price}"></label>
         <label>Image URL: <input type="text" th:field="*{imageUrl}"></label>
         <label>Stock: <input type="number" th:field="*{stock}"></label>
-        <button type="submit">Update Product</button>
+        <button class="btn btn-primary" type="submit">Update Product</button>
     </form>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/tiny-slider.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 </html>
