--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,10 +1,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-		<link href="css/tiny-slider.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="/css/tiny-slider.css" rel="stylesheet">
+		<link href="/css/style.css" rel="stylesheet">
     <title>Profile</title>
 </head>
 <body>
@@ -13,12 +13,12 @@
         <label>Username: <span th:text="*{username}"></span></label>
         <label>Email: <input type="email" th:field="*{email}"></label>
         <!-- Add more fields as needed -->
-        <button type="submit">Update</button>
+        <button class=" btn btn-primary" type="submit">Update</button>
     </form>
-    <a th:href="@{/logout}">Logout</a>
+    <a th:href="@{/logout}" class="btn btn-primary">Logout</a>
     
-		<script src="js/bootstrap.bundle.min.js"></script>
-		<script src="js/tiny-slider.js"></script>
-		<script src="js/custom.js"></script>
+		<script src="/js/bootstrap.bundle.min.js"></script>
+		<script src="/js/tiny-slider.js"></script>
+		<script src="/js/custom.js"></script>
 </body>
 </html>
