--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -7,7 +7,7 @@
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/tiny-slider.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
-   <link rel="shortcut icon" href="/assets/favicon.png">
+   <link rel="shortcut icon" href="/assets/favicon1.png">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarsSportify">
       <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
         <li><a class="nav-link" th:href="@{/shop}">Shop</a></li>
-        <li><a class="nav-link" th:href="@{/categories}">Categories</a></li>
+        <!-- <li><a class="nav-link" th:href="@{/categories}">Categories</a></li> -->
         <li><a class="nav-link active" th:href="@{/about}">About</a></li>
         <li><a class="nav-link" th:href="@{/contact}">Contact</a></li>
 
@@ -38,9 +38,9 @@
         <li th:if="${!#authorization.expression('isAuthenticated()')}">
           <a class="nav-link" th:href="@{/login}">Login</a>
         </li>
-        <li th:if="${!#authorization.expression('isAuthenticated()')}">
+        <!-- <li th:if="${!#authorization.expression('isAuthenticated()')}">
           <a class="nav-link" th:href="@{/register}">Register</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
@@ -70,7 +70,7 @@
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Sportify<span>.</span></a></div>
+						<div class="mb-4 footer-logo-wrap"><a href="/home" th:href="@{/home}" class="footer-logo">Sportify<span>.</span></a></div>
 						<p class="mb-4"></p>
 
 						<ul class="list-unstyled custom-social">
@@ -85,10 +85,10 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
+									<li><a href="/about" th:href="@{/about}">About us</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="/contact" th:href="@{/contact}">Contact us</a></li>
 								</ul>
 							</div>
 
