--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,37 +1,3 @@
-<!-- <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-  
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-		<link href="css/tiny-slider.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
-        <link rel="shortcut icon" href="spotify.png">
-    <title>Sportify - Home</title>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <h1>Welcome to Sportify</h1>
-    <p>Your online sports accessories store.</p>
-
-    <a th:href="@{/shop}">Go to Shop</a>
-
-    <th:block th:if="${#authorization.expression('isAuthenticated()')}">
-        <a th:href="@{/profile}">Profile</a>
-        <a th:href="@{/cart}">Cart</a>
-        <a th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}" th:href="@{/admin/dashboard}">Admin Dashboard</a>
-    </th:block>
-
-    <a th:href="@{/login}">Login</a>
-    <a th:href="@{/register}">Register</a>
-    
-		<script src="js/bootstrap.bundle.min.js"></script>
-		<script src="js/tiny-slider.js"></script>
-		<script src="js/custom.js"></script>
-</body>
-</html>
- -->
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
@@ -42,7 +8,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/tiny-slider.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/assets/icons8-s-100.png">
+    <link rel="shortcut icon" href="/assets/favicon1.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 
@@ -61,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarsSportify">
                 <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
                     <li><a class="nav-link" th:href="@{/shop}">Shop</a></li>
-                    <li><a class="nav-link" th:href="@{/categories}">Categories</a></li>
+                    <!-- <li><a class="nav-link" th:href="@{/categories}">Categories</a></li> -->
                     <li><a class="nav-link" th:href="@{/about}">About</a></li>
                     <li><a class="nav-link" th:href="@{/contact}">Contact</a></li>
 
@@ -80,15 +46,15 @@
                     <li th:if="${!#authorization.expression('isAuthenticated()')}">
                         <a class="nav-link" th:href="@{/login}">Login</a>
                     </li>
-                    <li th:if="${!#authorization.expression('isAuthenticated()')}">
+                    <!-- <li th:if="${!#authorization.expression('isAuthenticated()')}">
                         <a class="nav-link" th:href="@{/register}">Register</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- ✨ Hero Section -->
+    <!-- Hero Section -->
     <div class="hero py-5 text-center">
         <div class="container">
             <h1 class="display-4 fw-bold">Welcome to Sportify</h1>
@@ -119,10 +85,10 @@
                     <div class="row links-wrap">
                         <div class="col-6 col-sm-6 col-md-3">
                             <ul class="list-unstyled">
-                                <li><a href="#">About us</a></li>
+                                <li><a href="/about" th:href="@{/about}">About us</a></li>
                                 <li><a href="#">Services</a></li>
                                 <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="/contact" th:href="@{/contact}">Contact us</a></li>
                             </ul>
                         </div>
 
