--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- 🧭 Navbar -->
+    <!-- Navbar -->
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" aria-label="Sportify navbar">
         <div class="container">
             <a class="navbar-brand" href="/" th:href="@{/home}">Sportify<span>.</span></a>
@@ -43,30 +43,267 @@
                     </li>
 
                     <!-- Not Logged In -->
-                    <li th:if="${!#authorization.expression('isAuthenticated()')}">
-                        <a class="nav-link" th:href="@{/login}">Login</a>
-                    </li>
                     <!-- <li th:if="${!#authorization.expression('isAuthenticated()')}">
-                        <a class="nav-link" th:href="@{/register}">Register</a>
+                        <a class="nav-link" th:href="@{/login}">Login</a>
                     </li> -->
                 </ul>
+                <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+                     <!-- Not Logged In -->
+						<li th:if="${!#authorization.expression('isAuthenticated()')}">
+                            <a class="nav-link" th:href="@{/login}"><img src="/assets/user.svg"></a>
+                        </li>
+						<li><a class="nav-link" th:href="@{cart}"><img src="/assets/cart.svg"></a></li>
+					</ul>
             </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero py-5 text-center">
-        <div class="container">
-            <h1 class="display-4 fw-bold">Welcome to Sportify</h1>
-            <p class="lead">Your trusted destination for premium sports accessories — football, cricket, gym, and
-                beyond.</p>
+			<div class="hero">
+				<div class="container">
+					<div class="row justify-content-between">
+						<div class="col-lg-5">
+							<div class="intro-excerpt">
+								<h1>Welcome to <span clsas="d-block">Sportify</span></h1>
+								<p class="mb-4">Your trusted destination for premium sports accessories — football, cricket, gym, and beyond.</p>
+								<p><a th:href="@{/shop}" class="btn btn-secondary me-2">Shop Now</a><a th:href="@{/about}" class="btn btn-white-outline">Learn More</a></p>
+							</div>
+						</div>
+						<div class="col-lg-7">
+							<div class="hero-img-wrap">
+								<img src="/assets/hero.png" class="img-fluid">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		<!-- End Hero Section -->
+         <!-- Start Product Section -->
+		<div class="product-section">
+			<div class="container">
+				<div class="row">
 
-            <a href="/shop" th:href="@{/shop}" class="btn btn-secondary btn-lg me-2">Shop Now</a>
-            <a href="/about" th:href="@{/about}" class="btn btn-outline-dark btn-lg">Learn More</a>
-        </div>
-    </div>
+					<!-- Start Column 1 -->
+					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
+						<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
+						<p class="mb-4">Every product at Sportify is crafted using premium-grade materials to ensure top-tier performance, durability, and comfort. Whether you're gearing up for a football match, hitting the gym, or practicing your cricket shots — our accessories are built to endure every challenge you take on. </p>
+						<p><a th:href="@{shop}" class="btn">Explore</a></p>
+					</div> 
+					<!-- End Column 1 -->
+
+					<!-- Start Column 2 -->
+					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+						<a class="product-item" th:href="@{shop}">
+							<img src="/assets/product-1.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Real Madrid Home Kit</h3>
+							<strong class="product-price">₹799.00</strong>
+                            <span class="icon-cross">
+								<img src="/assets/cross.svg" class="img-fluid">
+							</span>
+						</a>
+					</div> 
+					<!-- End Column 2 -->
+
+					<!-- Start Column 3 -->
+					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+						<a class="product-item" th:href="@{shop}">
+							<img src="/assets/product-2.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Nike Football Boots</h3>
+							<strong class="product-price">₹4999</strong>
+
+							<span class="icon-cross">
+								<img src="/assets/cross.svg" class="img-fluid">
+							</span>
+						</a>
+					</div>
+					<!-- End Column 3 -->
+
+					<!-- Start Column 4 -->
+					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+						<a class="product-item" th:href="@{shop}">
+							<img src="/assets/product-3.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Gym Quipment</h3>
+							<strong class="product-price">₹2599</strong>
+
+							<span class="icon-cross">
+								<img src="/assets/cross.svg" class="img-fluid">
+							</span>
+						</a>
+					</div>
+					<!-- End Column 4 -->
+
+				</div>
+			</div>
+		</div>
+		<!-- End Product Section -->
+<!-- Start Why Choose Us Section -->
+		<div class="why-choose-section">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-lg-6">
+						<h2 class="section-title">Why Choose Sportify?</h2>
+						<p>At Sportify, we believe sports gear should be powerful, reliable, and stylish. Whether you're a beginner or a pro, we deliver quality that helps you push your limits.</p>
+
+						<div class="row my-5">
+							<div class="col-6 col-md-6">
+								<div class="feature">
+									<div class="icon">
+										<img src="/assets/truck.svg" alt="Image" class="imf-fluid">
+									</div>
+									<h3>Fast &amp; Free Shipping</h3>
+									<p>Get your gear delivered anywhere in India with fast, reliable, and free shipping on all orders.</p>
+								</div>
+							</div>
+
+							<div class="col-6 col-md-6">
+								<div class="feature">
+									<div class="icon">
+										<img src="/assets/bag.svg" alt="Image" class="imf-fluid">
+									</div>
+									<h3>Easy to Shop</h3>
+									<p>Our user-friendly platform ensures hassle-free browsing, secure payments, and smooth checkout.</p>
+								</div>
+							</div>
+
+							<div class="col-6 col-md-6">
+								<div class="feature">
+									<div class="icon">
+										<img src="/assets/support.svg" alt="Image" class="imf-fluid">
+									</div>
+									<h3>24/7 Support</h3>
+									<p>Have a query? Our support team is always ready to help you via chat, mail, or call — anytime you need.</p>
+								</div>
+							</div>
+
+							<div class="col-6 col-md-6">
+								<div class="feature">
+									<div class="icon">
+										<img src="/assets/return.svg" alt="Image" class="imf-fluid">
+									</div>
+									<h3>Hassle Free Returns</h3>
+									<p>Not satisfied with your order? Enjoy a 7-day no-questions-asked return policy on eligible items.</p>
+								</div>
+							</div>
+
+						</div>
+					</div>
+
+					<div class="col-lg-5">
+						<div class="img-wrap">
+							<img src="/assets/why-choose-us-img1.png" alt="Image" class="img-fluid">
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<!-- End Why Choose Us Section -->
+         <!-- Start Testimonial Slider -->
+		<div class="testimonial-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-7 mx-auto text-center">
+						<h2 class="section-title">Testimonials</h2>
+					</div>
+				</div>
+
+				<div class="row justify-content-center">
+					<div class="col-lg-12">
+						<div class="testimonial-slider-wrap text-center">
+
+							<div id="testimonial-nav">
+								<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
+								<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
+							</div>
+
+							<div class="testimonial-slider">
+								
+								<div class="item">
+									<div class="row justify-content-center">
+										<div class="col-lg-8 mx-auto">
+
+											<div class="testimonial-block text-center">
+												<blockquote class="mb-5">
+													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+												</blockquote>
+
+												<div class="author-info">
+													<div class="author-pic">
+														<img src="/assets/person-1.png" alt="Maria Jones" class="img-fluid">
+													</div>
+													<h3 class="font-weight-bold">Maria Jones</h3>
+													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div> 
+								<!-- END item -->
+
+								<div class="item">
+									<div class="row justify-content-center">
+										<div class="col-lg-8 mx-auto">
+
+											<div class="testimonial-block text-center">
+												<blockquote class="mb-5">
+													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+												</blockquote>
+
+												<div class="author-info">
+													<div class="author-pic">
+														<img src="/assets/person_3.jpg" alt="Maria Jones" class="img-fluid">
+													</div>
+													<h3 class="font-weight-bold">Maria Jones</h3>
+													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div> 
+								<!-- END item -->
+
+								<div class="item">
+									<div class="row justify-content-center">
+										<div class="col-lg-8 mx-auto">
+
+											<div class="testimonial-block text-center">
+												<blockquote class="mb-5">
+													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+												</blockquote>
+
+												<div class="author-info">
+													<div class="author-pic">
+														<img src="/assets/person_4.jpg" alt="Maria Jones" class="img-fluid">
+													</div>
+													<h3 class="font-weight-bold">Maria Jones</h3>
+													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div> 
+								<!-- END item -->
+
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End Testimonial Slider -->
+	
+
     <footer class="footer-section">
         <div class="container relative">
+
+            <div class="sofa-img">
+				<img src="/assets/mizuna_boot.png" alt="Image" class="img-fluid">
+			</div>
+
 
             <div class="row g-5 mb-5">
                 <div class="col-lg-4">
