--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -24,15 +24,11 @@
     <div class="collapse navbar-collapse" id="navbarsSportify">
       <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
         <li><a class="nav-link" th:href="@{/shop}">Shop</a></li>
-        <!-- <li><a class="nav-link" th:href="@{/categories}">Categories</a></li> -->
         <li><a class="nav-link active" th:href="@{/about}">About</a></li>
         <li><a class="nav-link" th:href="@{/contact}">Contact</a></li>
 
         <li th:if="${#authorization.expression('isAuthenticated()')}">
           <a class="nav-link" th:href="@{/profile}">Profile</a>
-        </li>
-        <li th:if="${#authorization.expression('isAuthenticated()')}">
-          <a class="nav-link" th:href="@{/cart}">Cart</a>
         </li>
         <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
           <a class="nav-link" th:href="@{/admin/dashboard}">Admin</a>
@@ -40,10 +36,15 @@
         <li th:if="${!#authorization.expression('isAuthenticated()')}">
           <a class="nav-link" th:href="@{/login}">Login</a>
         </li>
-        <!-- <li th:if="${!#authorization.expression('isAuthenticated()')}">
-          <a class="nav-link" th:href="@{/register}">Register</a>
-        </li> -->
       </ul>
+      <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+          <!-- Not Logged In -->
+          <li th:if="${!#authorization.expression('isAuthenticated()')}">
+            <a class="nav-link" th:href="@{/login}"><img src="/assets/user.svg"></a>
+          </li>
+          <li><a class="nav-link" th:href="@{/cart}"><img src="/assets/cart.svg"></a>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
@@ -89,9 +90,6 @@
       <div class="text-end mt-4">
         <h4>Total: ₹ <span th:text="${total}">0.00</span></h4>
         <div class="mt-3">
-          <!-- Uncomment if needed -->
-          <!-- <a th:href="@{/cart/clear}" class="btn btn-outline-danger me-2">Clear Cart</a> -->
-          <!-- <a th:href="@{/checkout}" class="btn btn-primary">Proceed to Checkout</a> -->
         </div>
       </div>
     </div>
