--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,26 +24,24 @@
     <div class="collapse navbar-collapse" id="navbarsSportify">
       <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
         <li><a class="nav-link" th:href="@{/shop}">Shop</a></li>
-        <!-- <li><a class="nav-link" th:href="@{/categories}">Categories</a></li> -->
         <li><a class="nav-link active" th:href="@{/about}">About</a></li>
         <li><a class="nav-link" th:href="@{/contact}">Contact</a></li>
 
         <li th:if="${#authorization.expression('isAuthenticated()')}">
           <a class="nav-link" th:href="@{/profile}">Profile</a>
         </li>
-        <li th:if="${#authorization.expression('isAuthenticated()')}">
-          <a class="nav-link" th:href="@{/cart}">Cart</a>
-        </li>
         <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
           <a class="nav-link" th:href="@{/admin/dashboard}">Admin</a>
         </li>
-        <li th:if="${!#authorization.expression('isAuthenticated()')}">
-          <a class="nav-link" th:href="@{/login}">Login</a>
-        </li>
-        <!-- <li th:if="${!#authorization.expression('isAuthenticated()')}">
-          <a class="nav-link" th:href="@{/register}">Register</a>
-        </li> -->
       </ul>
+      <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+					<!-- Not Logged In -->
+					<li th:if="${!#authorization.expression('isAuthenticated()')}">
+						<a class="nav-link" th:href="@{/login}"><img src="/assets/user.svg"></a>
+					</li>
+					<li><a class="nav-link" th:href="@{/cart}"><img src="/assets/cart.svg"></a>
+					</li>
+				</ul>
     </div>
   </div>
 </nav>
@@ -78,7 +76,7 @@
               </div>
 
               <div class="d-grid">
-                <button type="submit" class="btn btn-success">Register</button>
+                <button type="submit" class="btn btn-primary">Register</button>
               </div>
             </form>
 
